# swmmx_dev

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  m42.inp  parameters.csv  pyproject.toml  test2.py
.github/workflows/: build-macos-swmm.yml  draft-pdf.yml  publish.yml
example/: example.inp
examples/: 01_open_validate_run.py  02_modify_conduit_diameters_compare.py  03_step_by_step_runs_dynamic_control.py  04_plot_layout_examples.py  05_plot_timeseries_examples.py  06_plot_profile_examples.py  07_export_examples.py  08_time_and_count_functions.py  09_get_set_examples.py  10_create_model_from_scratch_add_remove.py  11_all_get_functions.ipynb  12_all_set_functions.ipynb  13_all_add_functions.ipynb  14_all_remove_functions.ipynb  15_all_plot_functions.ipynb  16_all_import_export_functions.ipynb  README.md  _build_api_notebooks.py  _helpers.py
examples/simple/: 01_open_validate_run.py  02_modify_conduit_diameters_compare.py  03_step_by_step_runs_dynamic_control.py  04_plot_layout_examples.py  05_plot_timeseries_examples.py  06_plot_profile_examples.py  07_export_examples.py  08_time_and_count_functions.py  09_get_set_examples.py  10_create_model_from_scratch_add_remove.py  README.md
examples/standard/: 01_open_validate_run.py  03_step_by_step_runs_dynamic_control.py  05_plot_timeseries_examples.py  06_plot_profile_examples.py  07_export_examples.py  08_time_and_count_functions.py  09_get_set_examples.py  10_create_model_from_scratch_add_remove.py  README.md  _helpers.py
paper/: paper.bib  paper.md
src/swmmx/: __init__.py  api.py  counts.py  dependencies.py  elements.py  engine.py  errors.py  inp.py  models.py  parameters.py  results.py  schema.py  time.py  validation.py
src/swmmx/core/: __init__.py  errors.py
src/swmmx/export/: __init__.py  base.py  csv.py  excel.py  gis.py  utils.py
src/swmmx/imports/: __init__.py  csv_importer.py  fields.py  gis_importer.py  importer.py  managers.py  results.py  schema.py
src/swmmx/plotting/: __init__.py  annotations.py  layout.py  profile.py  styles.py  timeseries.py  utils.py
src/swmmx/schemas/: all.csv
tests/: test_add_remove_api.py  test_all_get_functions.py  test_all_set_functions.py  test_count_api.py  test_engine_loader.py  test_export_api.py  test_import_api.py  test_packaging_metadata.py  test_parameter_surface.py  test_plotting_api.py  test_public_api.py
