[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swmmx"
version = "0.0.10"
description = "A professional, cross-platform Python toolkit for EPA SWMM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohammadali Geranmehr" }
]
keywords = ["swmm", "stormwater", "hydrology", "hydraulics", "epa"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.26,<2",
  "pandas>=2.1,<3",
  "matplotlib>=3.8,<3.9",
  "networkx>=3,<3.4",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
swmmx = [
  "py.typed",
  "bin/win64/*.dll",
  "bin/linux/*.so",
  "bin/macos/*",
  "schemas/*.csv",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
