[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swmmx"
version = "0.0.39"
description = "A Unified Python Toolkit for Building, Editing, Running, Importing, Visualizing, and Exporting EPA SWMM Models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohammadali Geranmehr" }
]
keywords = ["swmm", "stormwater", "hydrology", "hydraulics", "epa"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/mgeranmehr/swmmx_dev"
Repository = "https://github.com/mgeranmehr/swmmx_dev"
Issues = "https://github.com/mgeranmehr/swmmx_dev/issues"
Documentation = "https://github.com/mgeranmehr/swmmx_dev#readme"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
swmmx = [
  "py.typed",
  "bin/win64/*.dll",
  "bin/linux/*.so",
  "bin/macos/*.dylib",
  "schemas/*.csv",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
